--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -34,6 +34,7 @@ body {
   /*     **VERSÃO RESUMIDA** Short hand
   background: color( não utilizada nesse projeto) image repeat position/size */
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -177,4 +178,14 @@ footer {
   padding: 24px 0px;
   text-align: center;
   font-size: 14px;
+}
+
+/*media queries*/
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
